[tool.poetry]
name = "ironsworn-helper"
version = "0.1.0"
description = "An assistant to play Ironsworn"
authors = ["BombingArt <yaroshenkoyarik987@gmail.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
django-environ = "^0.11.2"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
